Changelog for Miosix np embedded OS

- Added proper compiler patch versioning through the _MIOSIX_GCC_PATCH_VERSION
  builtin macro.
- Added small fixed to the previous newlib patch. This is the final change for
  termios.h
- Implemented termios support in Miosix, now it is possible to disable echo
  and/or enter raw mode on serial ports using a standard POSIX interface.
- Added sys/termios.h to newlib patch
- Added sys/ioctl.h to newlib patch
- Improved Makefile path referencing to always use relative paths, as using
  absolute ones fails when the absolute path contains spaces. This proved to
  be impossible with makefiles alone and required to add a small perl script
- Added versioning to miosix_settings.h and board_settings.h to prevent
  misconfiguration when those files are updated.
- Moved board_settings.h in the config directory to allow out of git tree
  projects to tweak those files without editing files in the Miosix git repo.
- Added miosix/_tools/init_project_out_of_git_tree.pl script to help set up
  out of git tree projects.
- New makefile now supporting out of git tree projects, to help having the
  Miosix git repo as a submodule of another git repo.
- Updated backend_benchmark.cpp to use DevFs instead of the old Disk interface.
- Fixed a bug in the stm32 SDIO drivers that caused the slowest clock speed
  selection, resulting in a serious performance regression when writing to
  an SD card. Bug was added in commit e697ded4325a5a2de12706712abc4a846d733b3e
- Added streamwriter example to show how to write to an SD card at a relatively
  high data rate.
- Added dirlist testcase
- Relaxed file open mode checks in DevFs to allow opening device files with
  fopen()
- Added loop mount example.
- Fixed a bug in umount().
- Reworked logging.h to decrease code size.
- Moving from mallinfo() to _mallinfo_r() in getCurrentFreeHeap() to avoid
  accidentally bringing in iprintf(), which increases code size.