@@ -133,7 +133,6 @@ int pthread_attr_getstacksize(const pthread_attr_t *attr, size_t *stacksize)
 int pthread_attr_setstacksize(pthread_attr_t *attr, size_t stacksize)
 {
     if(stacksize<STACK_MIN) return EINVAL;
-    if((stacksize % 4) !=0) return EINVAL; //Stack size must be divisible by 4
     attr->stacksize=stacksize;
     return 0;
 }
